# tcc20-be1-mod2

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/model/: address.py  interface.py  network.py  route.py  router.py
app/route/: auth.py  router.py  snmp.py
app/setting/: database.py
