[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jonatan Silva <jonatan.silva@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
pymongo = "^3.11.0"
uvicorn = "^0.12.1"
dnspython = "^2.0.0"
simplejson = "^3.17.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
